complete discoverClick id add new html file and back to back button in javascript

--- a/discover.html
+++ b/discover.html
@@ -21,7 +21,7 @@
           Dev<span class="text-blue-500">Board</span>
         </h1>
       </div>
-      <button class="bg-blue-500 text-white px-3 py-1 rounded text-sm">Back to Back</button>
+      <button id="backBtn" class="bg-blue-500 text-white px-3 py-1 rounded text-sm">Back to Back</button>
     </div>
     <!-- Questions and answer -->
     <h1 class="text-2xl font-bold text-gray-600 text-center">Blogs</h1>
@@ -82,5 +82,6 @@
         appendChild. You can do this by using the remove tag with the id you want to remove.
       </p>
     </div>
+    <script src="./Dev-Board/script/discover.js"></script>
   </body>
 </html>
