--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div><span class="text-xl font-bold text-gray-900">05</span></div>
           </div>
         </div>
-        <div
+        <div id="discoverClick"
           class="bg-gradient-to-r from-blue-700 to-blue-300 text-white px-6 py-2 rounded-lg flex items-center font-bold shadow gap-4"
         >
           <div><img class="w-16" src="./Dev-Board/assets/board.png" alt="" /></div>
