--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
       referrerpolicy="no-referrer"
     />
   </head>
-  <body class="bg-blue-50 font-sans px-14 py-4">
+  <body class="bg-blue-50 font-sans px-6 lg:px-14 py-6">
     <!-- header -->
-    <div class="flex items-center justify-between bg-white mb-4 p-4 rounded-lg">
+    <div class="flex flex-col gap-4 lg:flex-row items-center lg:justify-between bg-white mb-4 p-4 rounded-lg">
       <div class="flex justify-center items-center gap-2">
-        <img class="w-8" src="./Dev-Board/assets/logo.png" alt="" />
-        <h1 class="text-2xl font-bold text-blue-300">
+        <img class="w-10 lg:w-8" src="./Dev-Board/assets/logo.png" alt="" />
+        <h1 class="text-xl lg::text-2xl font-bold text-blue-300">
           Dev<span class="text-blue-500">Board</span>
         </h1>
       </div>
-      <div class="flex items-center gap-8">
+      <div class="flex items-center  gap-4 lg:gap-8 mt-4 sm:mt-0">
         <div
           class="flex items-center bg-gray-50 px-4 py-2 rounded-lg shadow text-blue-600 font-bold"
         >
@@ -31,10 +31,10 @@
         <img id="colorBtn" class="w-8" src="./Dev-Board/assets/theme-btn.png" alt="" />
       </div>
     </div>
-    <div class="flex justify-between  w-full gap-6">
+    <div class="flex flex-col lg:flex-row justify-between  w-full gap-6">
       <!-- Discover new section -->
-      <div class="bg-white mb-4 p-4 w-[75%] rounded-xl">
-      <div class="flex items-center justify-between">
+      <div class="bg-white mb-4 p-4 w-full lg:w-[75%] rounded-xl">
+      <div class="lg:flex lg:items-center lg:justify-between grid grid-cols-1 gap-8">
         <div
           class="bg-gray-50 shadow rounded-lg px-6 py-3 text-blue-600 font-semibold flex items-center gap-6"
         >
@@ -48,7 +48,7 @@
           class="bg-gradient-to-r from-blue-700 to-blue-300 text-white px-6 py-2 rounded-lg flex items-center font-bold shadow gap-4"
         >
           <div><img class="w-16" src="./Dev-Board/assets/board.png" alt="" /></div>
-          <div class="text-xl">
+          <div class="lg:text-xl text-sm">
             
             Discover Something <br />
             New Today!
@@ -68,7 +68,7 @@
         </div>
       </div>
       <!-- Task Cards -->
-      <div class="grid grid-cols-3 gap-4 mt-6">
+      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 mt-6">
         <!-- card 1 -->
         <div class="bg-gray-50 p-4 rounded-lg shadow card">
           <p class="text-gray-600 bg-white w-fit p-2 rounded-xl ml-2">ShopEase</p>
@@ -192,7 +192,7 @@
       </div>
     </div>
 <!-- Activity Log section -->
-     <div class="bg-white p-4 rounded-lg shadow w-[30%] h-[106vh] activity-log">
+     <div class="bg-white p-4 rounded-lg shadow w-full lg:w-[30%] h-auto lg:h-[106vh] activity-log">
       <div class="text-center">
         <div class="flex justify-center items-center gap-2">
           <div>
